[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-tcn-vae"
version = "0.1.0"
description = "Graph-enhanced TCN-VAE architectures for time-series imputation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jui-Yang Lee" }
]
keywords = [
    "time-series",
    "imputation",
    "variational-autoencoder",
    "graph-neural-network",
    "uncertainty",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["graph_tcn_vae*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
